--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,9 @@
 .App {
-  text-align: center;
+  text-align: left;
+  display: flex;
+  
+  min-height: 100vh;
+  background-color: #65c3f6;
 }
 
 .App-logo {
